[gd_scene load_steps=16 format=3 uid="uid://cfkgjewglxqf6"]

[ext_resource type="Shader" path="res://shaders/Skybackground.gdshader" id="1_0q0pf"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_h7umd"]
[ext_resource type="Texture2D" uid="uid://c2ylfnr7y48p6" path="res://Art/Parallaxx/summer8/1.png" id="1_plth8"]
[ext_resource type="Texture2D" uid="uid://3lk0puod1d80" path="res://Art/Parallaxx/summer8/2.png" id="2_8oxiq"]
[ext_resource type="Shader" path="res://shaders/Skybackground2.gdshader" id="2_qa42g"]
[ext_resource type="Shader" path="res://shaders/skybackground3.gdshader" id="3_5eh0j"]
[ext_resource type="Texture2D" uid="uid://fkjb2m2upmsc" path="res://Art/Parallaxx/summer8/3.png" id="3_gsr5o"]
[ext_resource type="Texture2D" uid="uid://cicp7rotn0hwc" path="res://Art/Parallaxx/summer8/4.png" id="4_3khyl"]
[ext_resource type="Shader" path="res://shaders/grass.gdshader" id="7_k08bj"]
[ext_resource type="Texture2D" uid="uid://b32hb8bak1imr" path="res://Art/UI arts/AUTOMA.png" id="9_mnk2j"]
[ext_resource type="FontFile" uid="uid://k128qfbnuk" path="res://Fonts/upheaval (2)/upheavtt.ttf" id="11_voawx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gueyb"]
shader = ExtResource("1_0q0pf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pfovi"]
shader = ExtResource("2_qa42g")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j2edu"]
shader = ExtResource("3_5eh0j")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kp6q3"]
shader = ExtResource("7_k08bj")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h7umd")

[node name="Sky Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_gueyb")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_plth8")

[node name="Sky Background2" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_pfovi")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8oxiq")

[node name="Sky Background3" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_j2edu")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_gsr5o")

[node name="grass" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_kp6q3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_3khyl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -405.0
offset_top = -322.0
offset_right = 1515.0
offset_bottom = 758.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.414068, 0.377715)

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("9_mnk2j")
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.345
anchor_top = 1.0
anchor_right = 0.635
anchor_bottom = 1.0
offset_left = 3.56
offset_top = -311.0
offset_right = 2.47998
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, 1.04)

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_voawx")
theme_override_font_sizes/font_size = 40
text = "START"

[node name="Leaderboard" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_voawx")
theme_override_font_sizes/font_size = 40
text = "LEADERBOARD
"

[node name="Test" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_voawx")
theme_override_font_sizes/font_size = 40
text = "Test
"

[node name="Practice" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_voawx")
theme_override_font_sizes/font_size = 40
text = "Practice
"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_voawx")
theme_override_font_sizes/font_size = 40
text = "EXIT"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/Test" to="." method="_on_pratice_pressed"]
[connection signal="pressed" from="VBoxContainer/Practice" to="." method="_on_practice_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
